Fix 'Choose a level' overlapping 'Back'

--- a/projects/its-eelectric/eelectric.css
+++ b/projects/its-eelectric/eelectric.css
@@ -102,8 +102,8 @@ a {
 #menuexplain {
     position: absolute;
     top: 20px;
-    left: 0px;
-    right: 0px;
+    left: 100px;
+    right: 100px;
     text-align: center;
     font-size: 28px;
 }
